switch to second site

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,27 @@
+h1  {
+  border: solid;
+  color: aqua;
+  background-color: black;
+}
+.citypic {
+  width:400px;
+  height:400px;
+}
+h3 {
+  border: solid;
+  color: yellow;
+  background-color: black;
+}
+
+h4 {
+  border: solid;
+  color: orange;
+  background-color: black;
+}
 h1 {
 border: solid;
 color: white;
-background-color: green;
+background-color: black;
 }
 nav ul{
   color: black;
@@ -12,7 +32,7 @@ nav ul{
   border: solid;
   color: black;
   height: 400px;
-  width: 400px;
+  width: 800px;
 }
 .headings{
 color: blue;
